route-fuse.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Route
  metadata:
    creationTimestamp: null
    labels:
      group: com.redhat.jboss.fuse
      project: fuse-camel-sb-rest
      provider: fabric8
      version: 1.0.0-SNAPSHOT
    name: fuse-camel-sb-rest
  spec:
    host: people-service.apps.127.0.0.1.nip.io
    port:
      targetPort: http
    to:
      kind: Service
      name: fuse-camel-sb-rest
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: 2018-03-12T20:41:10Z
        status: "True"
        type: Admitted
      host: people-service.apps.127.0.0.1.nip.io
      routerName: router
      wildcardPolicy: None
kind: List
metadata: {}
